--- a/NLW#8/css/style.css
+++ b/NLW#8/css/style.css
@@ -268,3 +268,19 @@ body.menu-expanded .logo path {
 body.menu-expanded button path {
   stroke: white;
 }
+
+/***************SERVICES*******************/
+
+#services header h4 {
+  font-size: 1.4rem;
+  line-height: 150%;
+  letter-spacing: 0.08rem;
+
+  color: var(--primary-color);
+
+  text-transform: uppercase;
+}
+
+#services header h2 {
+  font-size: 3rem;
+}
