--- a/NLW#8/css/style.css
+++ b/NLW#8/css/style.css
@@ -133,7 +133,7 @@ header::before {
   margin: 0;
   color: var(--primary-color);
   font-size: 1.6rem;
-  line-height: 150%;
+  line-height: 150%; /*Defina a altura da linha para diferentes elementos*/
 }
 
 /*##############NAVIGATION######################*/
@@ -279,8 +279,26 @@ body.menu-expanded button path {
   color: var(--primary-color);
 
   text-transform: uppercase;
+
+  margin-bottom: 1.6rem;
 }
 
 #services header h2 {
   font-size: 3rem;
+  line-height: 3.9rem;
+
+  color: var(--headline);
+
+  margin-bottom: 6rem;
+}
+
+.card {
+  padding: 2.4rem;
+  text-align: left;
+
+  background: white;
+
+  border: 0.1rem solid var(--brand-light);
+  box-sizing: border-box;
+  border-radius: 0.6rem;
 }
