--- a/NLW#8/css/style.css
+++ b/NLW#8/css/style.css
@@ -55,24 +55,24 @@ ul {
   list-style: none;
 }
 
-header {
- margin-top: calc(4.1rem + var(--nav-heigth));
+#home {
+ padding-top: calc(4.1rem + var(--nav-heigth));
 }
 
-header h4 {
+#home h4 {
   font-size: 1.4rem;
   color: var(--primary-color);
   margin-bottom: 1.6rem;
 }
 
-header h1 {
+#home h1 {
   font-size: 3.4rem;
   color: var(--headline);
   line-height: 130%;
   margin-bottom: 2.4rem;
 }
  
-header p {
+#home p {
   font-size: 1.8rem;
   line-height: 150%;
   font-weight: 400;
@@ -106,7 +106,7 @@ header img {
   object-position: 0 2rem;
 }
 
-header::before {
+#home::before {
   content: '';
   width: 100vw;
   height:calc( 108rem + var(--nav-heigth));
